:wrench: [mypy] Ignore missing imports for pygit2.*

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,7 +88,7 @@ module = [
     "binaryornot.*",
     "jinja2_time",
     "pyftpdlib.*",
-    "pygit2",
+    "pygit2.*",
 ]
 ignore_missing_imports = true
 
