--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ platformdirs = "^2.0.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
-coverage = {extras = ["toml"], version = "^5.4"}
+coverage = {version = "^6.0b1", extras = ["toml"]}
 safety = "^1.10.3"
 mypy = "^0.910"
 typeguard = "^2.12.1"
