--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ sphinx-rtd-theme = "^0.5.2"
 sphinx-click = "^3.0.1"
 Pygments = "^2.10.0"
 pyftpdlib = "^1.5.6"
+pytest-sugar = "^0.9.4"
 
 [tool.poetry.scripts]
 cutty = "cutty.__main__:main"
