--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,15 +12,17 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - { python-version: "3.9", os: ubuntu-latest, session: "pre-commit" }
-          - { python-version: "3.9", os: ubuntu-latest, session: "safety" }
+          - { python-version: "3.10", os: ubuntu-latest, session: "pre-commit" }
+          - { python-version: "3.10", os: ubuntu-latest, session: "safety" }
+          - { python-version: "3.10", os: ubuntu-latest, session: "mypy" }
           - { python-version: "3.9", os: ubuntu-latest, session: "mypy" }
+          - { python-version: "3.10", os: ubuntu-latest, session: "tests" }
           - { python-version: "3.9", os: ubuntu-latest, session: "tests" }
-          - { python-version: "3.9", os: windows-latest, session: "tests" }
-          - { python-version: "3.9", os: macos-latest, session: "tests" }
-          - { python-version: "3.9", os: ubuntu-latest, session: "typeguard" }
-          - { python-version: "3.9", os: ubuntu-latest, session: "xdoctest" }
-          - { python-version: "3.9", os: ubuntu-latest, session: "docs-build" }
+          - { python-version: "3.10", os: windows-latest, session: "tests" }
+          - { python-version: "3.10", os: macos-latest, session: "tests" }
+          - { python-version: "3.10", os: ubuntu-latest, session: "typeguard" }
+          - { python-version: "3.10", os: ubuntu-latest, session: "xdoctest" }
+          - { python-version: "3.10", os: ubuntu-latest, session: "docs-build" }
 
     env:
       NOXSESSION: ${{ matrix.session }}
@@ -101,10 +103,10 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v2.4.0
 
-      - name: Set up Python 3.9
+      - name: Set up Python 3.10
         uses: actions/setup-python@v2.3.0
         with:
-          python-version: "3.9"
+          python-version: "3.10"
 
       - name: Upgrade pip
         run: |
