--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,7 @@ filterwarnings = [
 
 [tool.mypy]
 strict = true
+warn_unreachable = true
 pretty = true
 show_column_numbers = true
 show_error_codes = true
