➕ [poetry] Add dependency on questionary ^1.10.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ httpx = ">=0.18.1,<0.21.0"
 binaryornot = "^0.4.4"
 pluggy = ">=0.13.1,<1.1.0"
 platformdirs = "^2.0.2"
+questionary = "^1.10.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
