--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ binaryornot = "^0.4.4"
 pluggy = ">=0.13.1,<1.1.0"
 platformdirs = "^2.0.2"
 questionary = "^1.10.0"
+prompt-toolkit = "^3.0.22"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
