--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ pluggy = ">=0.13.1,<1.1.0"
 platformdirs = "^2.0.2"
 questionary = "^1.10.0"
 prompt-toolkit = "^3.0.22"
+Pygments = "^2.10.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
