✨ [templates] Re-implement prompts using questionary instead of click (#659)
* ➕ [poetry] Add dependency on questionary ^1.10.0

* ➕ [poetry] Add dependency on prompt-toolkit ^3.0.22

* ➕ [poetry] Add dependency on pygments ^2.10.0

* 🔧 [mypy] Add pygments to overrides

* ✅ [templates] Add tests for questionary-based prompts

* ✨ [templates] Add questionary-based prompts

* 🔨 [templates] Extract function `bindvariables` from `bindcookiecuttervariables`

* 🔨 [templates] Move function `bindvariables` to `domain.binders`

* 🔨 [templates] Inline function `bindcookiecuttervariables`

* ✨ [projects] Use questionary-based prompts in `generate`

* ✅ [functional] Add fixture for piping input to prompt_toolkit

* ✅ [functional] Use `pipeinput` fixture in `runcutty`

* 🔨 [tests] Extract key constants to module `tests.util.keys`

* ✅ [functional] Adapt user input or pass `--non-interactive` in tests

* 🔥 [templates] Remove test for `cookiecutter.prompts`

* 🔥 [templates] Remove module `cookiecutter.prompts`

* 🔨 [templates] Slide `if` branch

* 🔨 [templates] Remove dead code

* 🔨 [templates] Replace `Any` with prompt-toolkit types in `createprompt`

* 🔨 [templates] Rename function `_{load_json_dict => load_json_dict}`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ httpx = ">=0.18.1,<0.21.0"
 binaryornot = "^0.4.4"
 pluggy = ">=0.13.1,<1.1.0"
 platformdirs = "^2.0.2"
+questionary = "^1.10.0"
+prompt-toolkit = "^3.0.22"
+Pygments = "^2.10.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
@@ -90,6 +93,7 @@ module = [
     "jinja2_time",
     "pyftpdlib.*",
     "pygit2.*",
+    "pygments.*",
 ]
 ignore_missing_imports = true
 
