--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ sphinx-click = "^3.0.2"
 Pygments = "^2.10.0"
 pyftpdlib = "^1.5.6"
 pytest-sugar = "^0.9.4"
+pyupgrade = "^2.29.0"
 
 [tool.poetry.scripts]
 cutty = "cutty.__main__:main"
