--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,12 +36,12 @@ mypy = "^0.910"
 typeguard = "^2.13.2"
 xdoctest = {extras = ["colors"], version = "^0.15.10"}
 sphinx = "^4.3.0"
-sphinx-autobuild = "^2021.3.14"
+sphinx-autobuild = ">=2021.3.14"
 pre-commit = "^2.15.0"
 flake8 = "^4.0.1"
-black = "^21.11b1"
+black = ">=21.11b1"
 flake8-bandit = "^2.1.2"
-flake8-bugbear = "^21.9.2"
+flake8-bugbear = ">=21.9.2"
 flake8-docstrings = "^1.6.0"
 flake8-rst-docstrings = "^0.2.3"
 pep8-naming = "^0.12.1"
