--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,12 +48,12 @@ pep8-naming = "^0.12.1"
 darglint = "^1.8.0"
 reorder-python-imports = "^2.6.0"
 pre-commit-hooks = "^4.0.1"
-sphinx-rtd-theme = "^1.0.0"
 sphinx-click = "^3.0.2"
 Pygments = "^2.10.0"
 pyftpdlib = "^1.5.6"
 pytest-sugar = "^0.9.4"
 pyupgrade = "^2.29.0"
+furo = ">=2021.11.12"
 
 [tool.poetry.scripts]
 cutty = "cutty.__main__:main"
