Include test suite in code coverage
Retrocookie-Original-Commit: cjolowicz/cookiecutter-hypermodern-python-instance@cdc7791

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,10 +60,11 @@ cutty = "cutty.__main__:main"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
+tests = ["tests", "*/tests"]
 
 [tool.coverage.run]
 branch = true
-source = ["cutty"]
+source = ["cutty", "tests"]
 
 [tool.coverage.report]
 show_missing = true
