🔧 [coverage] Exclude lines with `raise NotImplementedError` from coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,7 @@ exclude_lines = [
     "pragma: no cover",
     "@overload",
     "pytest.skip",
+    "raise NotImplementedError",
 ]
 
 [tool.pytest.ini_options]
