--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,10 +60,11 @@ cutty = "cutty.__main__:main"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
+tests = ["tests", "*/tests"]
 
 [tool.coverage.run]
 branch = true
-source = ["cutty"]
+source = ["cutty", "tests"]
 
 [tool.coverage.report]
 show_missing = true
@@ -71,6 +72,8 @@ fail_under = 100
 exclude_lines = [
     "pragma: no cover",
     "@overload",
+    "pytest.skip",
+    "raise NotImplementedError",
 ]
 
 [tool.pytest.ini_options]
