--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -89,23 +89,37 @@ jobs:
           restore-keys: |
             ${{ steps.pre-commit-cache.outputs.result }}-
 
-      - name: Install libgit2
+      - name: Restore build directory for libgit2
+        uses: actions/cache@v2.1.7
+        if: matrix.os == 'ubuntu-latest' && startsWith(matrix.python, '3.11.')
+        with:
+          path: .thirdparty/libgit2-1.3.0
+          key: .thirdparty/libgit2-1.3.0
+
+      - name: Build and install libgit2
         if: matrix.os == 'ubuntu-latest' && startsWith(matrix.python, '3.11.')
         run: |
+          set -x
+
           package=libgit2
           version=1.3.0
           url=https://github.com/$package/$package/archive/refs/tags/v$version.tar.gz
-          directory=.thirdparty/$package-$version
+          sourcedir=.thirdparty/$package-$version
+          builddir=$sourcedir/build
 
-          sudo sed --in-place 's/^# deb-src /deb-src /' /etc/apt/sources.list
-          sudo apt-get update && sudo apt-get build-dep --yes $package
-          mkdir --parents $directory && cd $directory
-          curl --fail --silent --show-error --location $url |
-            tar --gunzip --extract --strip-components=1
-          mkdir build && cd build
-          cmake ..
-          cmake --build .
-          sudo make install
+          if [ ! -d "$sourcedir" ]
+          then
+              sudo sed --in-place 's/^# deb-src /deb-src /' /etc/apt/sources.list
+              sudo apt-get update && sudo apt-get build-dep --yes $package
+
+              mkdir --parents $sourcedir
+              curl --fail --silent --show-error --location $url |
+                tar --gunzip --extract --strip-components=1 --directory=$sourcedir
+              cmake -S $sourcedir -B $builddir
+              cmake --build $builddir
+          fi
+
+          sudo cmake --install $builddir
           sudo ldconfig
         env:
           CLICOLOR_FORCE: "1"
