--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,6 @@ flake8-docstrings = ">=1.6.0"
 flake8-rst-docstrings = ">=0.2.3"
 pep8-naming = ">=0.12.1"
 darglint = ">=1.8.0"
-reorder-python-imports = ">=2.6.0"
 pre-commit-hooks = ">=4.0.1"
 sphinx-click = ">=3.0.2"
 Pygments = ">=2.10.0"
@@ -54,6 +53,7 @@ pyftpdlib = ">=1.5.6"
 pytest-sugar = ">=0.9.4"
 pyupgrade = ">=2.29.0"
 furo = ">=2021.11.12"
+isort = "^5.10.1"
 
 [tool.poetry.scripts]
 cutty = "cutty.__main__:main"
@@ -81,6 +81,12 @@ filterwarnings = [
     "ignore:no type annotations present -- not typechecking .*",
     "ignore:no code associated -- not typechecking .*",
 ]
+
+[tool.isort]
+profile = "black"
+force_single_line = true
+order_by_type = false
+lines_after_imports = 2
 
 [tool.mypy]
 strict = true
